@@ -37,15 +37,11 @@ class Net::SSLeay::SSL_CTX : pointer {
   use StringList;
   
   # Class Variables
-  our $REMOVE_SESSION_CBS : Hash of Net::SSLeay::Callback::RemoveSession;
-  
   our $VERIFY_CBS : Hash of Net::SSLeay::Callback::Verify;
   
   our $MUTEX : Sync::Mutex;
   
   INIT {
-    $REMOVE_SESSION_CBS = Hash->new;
-    
     $VERIFY_CBS = Hash->new;
     
     $MUTEX = Sync::Mutex->new;
@@ -133,46 +129,7 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_tlsext_servername_callback : long ($cb : Net::SSLeay::Callback::TlsextServername, $arg : object = undef);
   
-  native method sess_set_remove_cb : void ($cb : Net::SSLeay::Callback::NewSession);
-  
   native method DESTROY : void ();
-  
-  private method GET_REMOVE_SESSION_CB : Net::SSLeay::Callback::RemoveSession ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->reader_unlock;
-    });
-    
-    $MUTEX->reader_lock;
-    
-    my $psk_server_cb = (Net::SSLeay::Callback::RemoveSession)$REMOVE_SESSION_CBS->get($key);
-    
-    return $psk_server_cb;
-  }
-  
-  private method SET_REMOVE_SESSION_CB : void ($key : string, $psk_server_cb : Net::SSLeay::Callback::RemoveSession) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    $REMOVE_SESSION_CBS->set($key, $psk_server_cb);
-  }
-  
-  private method DELETE_REMOVE_SESSION_CB : Net::SSLeay::Callback::RemoveSession ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    my $deleted = (Net::SSLeay::Callback::RemoveSession)$REMOVE_SESSION_CBS->delete($key);
-    
-    return $deleted;
-  }
   
   private method GET_VERIFY_CB : Net::SSLeay::Callback::Verify ($key : string) {
     
